update codes + keys
psp/ps3 keys

--- a/PS3/games.conf
+++ b/PS3/games.conf
@@ -3082,6 +3082,16 @@ secure_file_id:*=4649464152554C45532C5355434B4100
 ;disc_hash_key=
 secure_file_id:*=4649464152554C45532C5355434B4100
 
+; "FIFA 18" (FIFARULES,SUCKA.)
+[BLUS31611/BLES02250/BLJM61355/BLUS31610]
+;disc_hash_key=
+secure_file_id:*=4649464152554C45532C5355434B4100
+
+; "FIFA 19" (FIFARULES,SUCKA.)
+[BLUS31617/BLES02258/BLJM70001/BLUS31616]
+;disc_hash_key=
+secure_file_id:*=4649464152554C45532C5355434B4100
+
 ; "FIFA Street" (FIFARULES,SUCKA.)
 [BLUS30882/BLES01493/NPUB30651/NPEB00822/BLJM60457/BLAS50452]
 ;disc_hash_key=
