add title-id DBs

--- a/PS3/games.conf
+++ b/PS3/games.conf
@@ -317,6 +317,11 @@ secure_file_id:UNPROTECTED=554E50524F54454354454447414D4500
 ;disc_hash_key=
 secure_file_id:UNPROTECTED=554E50524F54454354454447414D4500
 
+; "Need for Speed™ Carbon"
+[SLUS21493]
+;disc_hash_key=
+secure_file_id:UNPROTECTED=554E50524F54454354454447414D4500
+
 ; "NHL™ 08"
 [BLUS30062/BLES00118/NPUB90028]
 ;disc_hash_key=
