--- a/.github/workflows/update-pack.yml
+++ b/.github/workflows/update-pack.yml
@@ -25,7 +25,7 @@ jobs:
           cd ../PS2
           zip -9 ../docs/PS3/apollo-ps3-update.zip *.*
           cd ..
-          zip -9 -r ../docs/PS3/apollo-ps3-update.zip python/
+          zip -9 -r docs/PS3/apollo-ps3-update.zip python/
 
       - name: Create PS4 update file
         run: |
@@ -36,7 +36,7 @@ jobs:
           cd ../PS2
           zip -9 ../docs/PS4/apollo-ps4-update.zip *.*
           cd ..
-          zip -9 -r ../docs/PS3/apollo-ps3-update.zip python/
+          zip -9 -r docs/PS4/apollo-ps4-update.zip python/
 
       - name: Create PSP update file
         run: |
@@ -45,7 +45,7 @@ jobs:
           cd PSP
           zip -9 ../docs/PSP/apollo-psp-update.zip *.*
           cd ..
-          zip -9 -r ../docs/PS3/apollo-ps3-update.zip python/
+          zip -9 -r docs/PSP/apollo-psp-update.zip python/
 
       - name: Create PS Vita update file
         run: |
@@ -56,7 +56,7 @@ jobs:
           cd ../PSP
           zip -9 ../docs/PSV/apollo-vita-update.zip *.*
           cd ..
-          zip -9 -r ../docs/PS3/apollo-ps3-update.zip python/
+          zip -9 -r docs/PSV/apollo-vita-update.zip python/
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
